--- a/styles.css
+++ b/styles.css
@@ -116,6 +116,7 @@ h1 {
     display: grid;
     grid-template-columns: auto auto auto;
     font-size: large;
+    justify-content: center;
 }
 
 .grid-item {
