--- a/styles.css
+++ b/styles.css
@@ -92,12 +92,7 @@ h1 {
 
 /* MAIN */
 
-.t-t-t-current-player {
-    font-weight: 900;
-    font-size: 40px;
-}
-
-.winner {
+.player-banner {
     font-weight: 900;
     font-size: 40px;
 }
